add test and comments

--- a/tweetAnalysis .ipynb
+++ b/tweetAnalysis .ipynb
@@ -822,7 +822,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "##  Neural Net: LSTM vs CNN approach\n",
@@ -862,10 +862,10 @@
     "The word waiting and luggage may be associated with negative emotions more. \n",
     "\n",
     "\"united thank you for responding so promptly i look forward to the 240 kms drive to the office to file a claim\"\n",
-    "In some cases, tweets were classified as positive, but examination suggests that these tweets are likely to be sarcastic or express some discomfort. \n",
+    "In some cases, tweets were classified as positive, but examination suggests that these tweets are likely to be sarcastic or express some discomfort. This type of error also seems to be common with LSTM.\n",
     "\n",
     "\"united i think this is the best first class i have ever gotten denver to lax and it's wonderful\"\n",
-    "There are some errors with CNN that's much more blatant, where we see something explicitly positive, classified as negative. "
+    "There are some errors with CNN that's much more blatant, where we see something explicitly positive, classified as negative. This error type doesn't seem to be as much an issue when using LSTM. "
    ]
   }
  ],
