--- a/tweetAnalysis .ipynb
+++ b/tweetAnalysis .ipynb
@@ -828,7 +828,7 @@
     "##  Neural Net: LSTM vs CNN approach\n",
     "\n",
     "The last approach uses the pretrained embedding layers for each word in the sequence, feeding it into  hidden layer for each sequence to generate prediction. \n",
-    "The best performance for this approach 77%, an improvement from either of the methods \n",
+    "The best performance is LSTM with accuracy 77%, an improvement from either of the methods \n",
     "but not significantly better than the gradient boost approach on average embeddings.\n",
     "\n",
     "The code for this approach can be found in the model directory. \n",
@@ -844,28 +844,34 @@
     "\n",
     "\n",
     "CNN results\n",
-    "Overall accuracy: 69% \n",
+    "Overall accuracy: 75% \n",
     "\n",
     "| actual sentiment | % correct prediction |\n",
     "|------------------|----------------------|\n",
-    "| positive  |    0.342857|\n",
-    "| neutral   |   0.221557 |\n",
-    "| negative   |    0.924242 |\n",
+    "| positive  |    0.561538|\n",
+    "| neutral   |     0.404372 |\n",
+    "| negative   |    0.919540 |\n",
     "\n",
     "\n",
-    "The CNN approach seems worse at predicting both the neutral and positive sentiments, and in fact, seems to have a tendency to predict non-negative as negative. \n",
+    "The CNN approach, when well-specified, creates somewhat similar outcome. LSTM is still the best performing, but this might change with further parameter tuning. Interestingly, though worse at predicting negative tweets, the CNN model is much better at predicting neutral tweets. \n",
     "\n",
-    "This might be due to the way it anchors on certain words. For example: \n",
-    "\n",
-    "Examples of sentences classified as negative but actually positive: \n",
-    "\"united it was very comfortable now waiting for our luggage\" \n",
+    "Examples of sentences LSTM misclassified neutral sentiment tweets: \n",
+    "\"united rebooting chicago dispatch system need pivotalcf as i'm tired of sitting on planes\"\n",
+    "Both CNN and LSTM misclassified this as negative, and could be arguably negative \n",
     "The word waiting and luggage may be associated with negative emotions more. \n",
     "\n",
-    "\"united thank you for responding so promptly i look forward to the 240 kms drive to the office to file a claim\"\n",
-    "In some cases, tweets were classified as positive, but examination suggests that these tweets are likely to be sarcastic or express some discomfort. This type of error also seems to be common with LSTM.\n",
+    "\"united it is possible to make a ticket change via twitter traveling internationally and can't make calls thanks in advance\" \n",
+    "LSTM believes this is a positive tweet, perhaps due to the polite \"thanks\", but CNN recognize that this is netural \n",
     "\n",
-    "\"united i think this is the best first class i have ever gotten denver to lax and it's wonderful\"\n",
-    "There are some errors with CNN that's much more blatant, where we see something explicitly positive, classified as negative. This error type doesn't seem to be as much an issue when using LSTM. "
+    "\n",
+    "Examples of sentences CNN misclassified negative sentiment tweets: \n",
+    "\n",
+    "\n",
+    "\"united i would like to know what is the easiest way to get a refund.\" \n",
+    "CNN thought this was a neutral tweet, probably because it seems to be information seeking, i.e. I would like to know.. whereas LSTM may have indexed more on the word refund. \n",
+    "\n",
+    "\"united uh i booked it through the ua website why the price change\"\n",
+    "Both CNN And LSTM thought this tweet was neutral, likely because the sentence is composed of words related to logistics, with the exception of uh. "
    ]
   }
  ],
